feature: support token to control api access rights
